--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,3 +14,5 @@ tauri = { version = "2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 tauri-plugin-shell = "2"
+serde = { version = "1", features = ["derive"] }
+rfd = "0.14"
